# search-species

./: .gitignore  README.md  pyproject.toml
docs4agentSkill/: SKILL.md
docs4agentSkill.old/: SKILL.md
docs4agentSkill.old/reference/: render.md
docs4agentSkill/reference/: backends.md  render.md
src/search_species/: __init__.py  _config.py  _schema.py  main.py  renderCard.py
tests/: __init__.py  test_render.py  test_search.py  test_search_opsin.py  test_search_pubchem.py  test_search_wikidata.py
tests/cache/: searchOPSIN_20260311164731_(2S,5R,..._.json  searchOPSIN_20260311164749_Methyle..._.json  searchPubChem_20260311164754_(1,1'-B..._.json  searchPubChem_20260311164756_Potassi..._.json  searchPubChem_20260311164759_[1,1'-B..._.json  searchPubChem_20260311164803_Abacavir_.json  searchPubChem_20260311164805_Abacavi..._.json  searchPubChem_20260311164806_Ziagen_.json  searchPubChem_20260311164808_Opaganib_.json  searchPubChem_20260311164811_Opaganib_.json  searchPubChem_20260311164813_Benzoyl..._.json  searchPubChem_20260311164816_Opaganib_.json  searchPubChem_20260311164820_Palytoxin_.json  searchPubChem_20260311164823_Palytox..._.json  searchPubChem_20260311164825_Palytoxin_.json  searchPubChem_20260311164828_42-Hydr..._.json  searchWikiData_20260311164832_TNT_.json  searchWikiData_20260311164836_TNT_.json  searchWikiData_20260311164837_TNT_.json  searchWikiData_20260311164841_apple_.json  searchWikiData_20260311164845_Apple Inc._.json  searchWikiData_20260311164849_Malus d..._.json  searchWikiData_20260311164853_Malus p..._.json  (+5 more)
(+9 files in other folders)
