[project]
name = "search-species"
version = "0.1.0"
description = "A command-line tool that can search for chemical substances through PubChem, OPSIN, and Wikidata, and supports rendering of search results."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "rdkit>=2025.9.6",
    "requests>=2.32.5",
]


[project.scripts]
search-species = "search_species.main:search_cli"
render-species = "search_species.main:render_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.package-data]
"search_species" = ["assets/*.ttf"]